<resources>
    <string name="app_name">Bike Chacha</string>

    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_having_account">Already Having an Account?</string>
    <string name="log_in">Log In</string>
    <string name="not_having_account">Not Having an Account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">Logout</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="gps">GPS</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="office">Office</string>
    <string name="add">Add</string>
    <string name="mail">Mail</string>
    <string name="storage">Storage</string>
    <string name="bookservice">Book Service</string>
    <string name="aboutus">About us</string>


</resources>
