<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.mikhaellopez.circularimageview.CircularImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/person_image"
            android:src="@drawable/ic_person_black_24dp"
            app:civ_border_width="1dp"
            app:civ_border_color="#A8A8A8"
            app:civ_shadow="false"
            android:scaleType="centerInside"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:padding="8dp">


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Person's name"
                android:textSize="20sp"
                android:textStyle="bold" />


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="8dp"
        android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="8dp"
                android:paddingHorizontal="5dp"
                android:id="@+id/bookservice_layout">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/bookservice_imageview"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_book_white"
                        android:background="#171861"
                        android:scaleType="fitXY"
                        android:padding="10dp"/>
                </androidx.cardview.widget.CardView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/bookservice"
                    android:textColor="#171861"
                    android:textSize="10sp"
                    />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingHorizontal="5dp"
            android:id="@+id/storage_layout">
            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/storage_imageview"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_storage_white"
                    android:background="#171861"
                    android:scaleType="fitXY"
                    android:padding="10dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/storage"
                android:textColor="#171861"
                android:textSize="10sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingHorizontal="5dp"
            android:id="@+id/aboutus_layout">
            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/aboutus_imageview"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_info_outline_white_24dp"
                    android:background="#171861"
                    android:scaleType="fitXY"
                    android:padding="10dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/aboutus"
                android:textColor="#171861"
                android:textSize="10sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingHorizontal="5dp"
            android:id="@+id/mail_layout">
            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/mail_imageview"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_mail_white"
                    android:background="#171861"
                    android:scaleType="fitXY"
                    android:padding="10dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/mail"
                android:textColor="#171861"
                android:textSize="10sp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="8dp"
            android:paddingHorizontal="5dp"
            android:id="@+id/logout_layout">
            <androidx.cardview.widget.CardView
                android:layout_width="60dp"
                android:layout_height="60dp"
                app:cardCornerRadius="25dp">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/logout_imageview"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_power_settings_white"
                    android:background="#171861"
                    android:scaleType="fitXY"
                    android:padding="10dp"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/logout"
                android:textColor="#171861"
                android:textSize="10sp"
                />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="#fff"
        android:padding="16dp">
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="#fff"
            android:src="@drawable/ic_settings_blue_24dp"/>

    </LinearLayout>

</LinearLayout>