<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    tools:context=".Fragments.BottomFirstFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:id="@+id/current_location"
            android:justificationMode="inter_word"
            android:text="Location will be displayed here"
            android:textColor="#171861"
            android:textSize="25sp"
            android:textStyle="bold"
            android:padding="10dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="5dp"
                android:id="@+id/gps_layout">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/gps_imageview"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_gps_fixed_white_24dp"
                        android:background="#171861"
                        android:scaleType="fitXY"
                        android:padding="10dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/gps"
                    android:textColor="#171861"
                    android:textSize="15sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_layout"
                android:orientation="vertical"
                android:paddingHorizontal="5dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/search_imageview"
                        android:background="#171861"
                        android:scaleType="fitXY"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_search_white_24dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/search"
                    android:textColor="#171861"
                    android:textSize="15sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/home_layout"
                android:orientation="vertical"
                android:paddingHorizontal="5dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/home_imageview"
                        android:background="#171861"
                        android:scaleType="fitXY"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_home_white_24dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/home"
                    android:textColor="#171861"
                    android:textSize="15sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/office_layout"
                android:orientation="vertical"
                android:paddingHorizontal="5dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/office_imageview"
                        android:background="#171861"
                        android:scaleType="fitXY"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_business_white_24dp"/>
                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/office"
                    android:textColor="#171861"
                    android:textSize="15sp"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/add_layout"
                android:orientation="vertical"
                android:paddingHorizontal="5dp">
                <androidx.cardview.widget.CardView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    app:cardCornerRadius="25dp">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/add_imageview"
                        android:background="#171861"
                        android:scaleType="fitXY"
                        android:padding="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/ic_add_location_white_24dp"/>

                </androidx.cardview.widget.CardView>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add"
                    android:textColor="#171861"
                    android:textSize="15sp" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:background="#fff"
            android:padding="16dp">
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:background="#fff"
                android:src="@drawable/ic_settings_blue_24dp"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_imageview"
                android:padding="10dp"
                android:background="#fff"
                android:src="@drawable/ic_arrow_forward_blue_24dp"/>

        </LinearLayout>

    </LinearLayout>
</LinearLayout>